# frank-wolfe-vi

./: Cargo.toml  README.md
examples/: fintech_box.rs  fintech_simplex.rs  game_box.rs  game_simplex.rs  ml_box.rs  ml_simplex.rs
lean/: FrankWolfeVI.lean  RUST_LEAN_ALIGNMENT.md
src/: diagnostics.rs  lib.rs  operator.rs  solver.rs
src/set/: box_set.rs  mod.rs  simplex.rs
